--- a/Firebase-Storage/Firebase-Storage/Info.plist
+++ b/Firebase-Storage/Firebase-Storage/Info.plist
@@ -20,6 +20,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>App uses media information</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App uses camera to capture photos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App uses microphone to communicate  audios</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>App access photo library for adding images</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App access photos from library</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
